Lesson 20 - API Implementation: Implemented Users list action
